Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30089

Qt Creators ClangFormat settings changes do not appear to work in the preview

    XMLWordPrintable

Details

    • Windows
    • a0cc2e3c3 (12.0)

    Description

      If user wants to change the C++ settings in Preferences/C++ and does changes for example in "Content", "Braces" etc the changes are instantly visible in the right preview window.

      If user alters the "ClangFormat" settings then the changes do not appear in the preview window which seems to be a bug.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            artem.sokolovskii Artem Sokolovskii (Inactive)
            tero.pelkonen Tero Pelkonen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes